Remove homegrown PCRE2/Boost.Regex detection
Autotools has built a in mechanism for finding packaged libraries:

PKG_CHECK_MODULES

Boost.Regex does not distribute a pkg-config file, apparently because
the name of the library is inconsistent across distros, so it is
detected with AC_SEARCH_LIBS and AC_CHECK_HEADER

Deleted m4/ax_check_pcre2.m4 and m4/ax_boost_regex.m4. Custom scripts
are not only unnecessary, but these were broken. Not supporting
cross-compilation, and relying on hardcoded paths means they wouldn't
work on all distros.

The boost libs in particular, are complex beasts, and an attempt by a
third party to provide configuration that the authors themselves don't
provide, is error prone, and the deleted script was riddled with errors.
On my Ubuntu-16 system, the library is not boost_regex-mt, but simply
boost-regex to name only a more glaring problem. It is unlikely that a
third party would be able to provide a portable way to detect libboost,
so this script should have never existed.

Also, the deleted scripts did not provide an error to the user at
configuration time if both PCRE2 and boost-regex were not found; This
most elementary failure to report missing dependencies is what told me
that these hacks must be removed.

--- a/configure.ac
+++ b/configure.ac
@@ -62,11 +62,23 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
 ],[AC_MSG_RESULT(no)
 ])
 
-AX_CHECK_PCRE2([8], [], [echo "recommended PCRE2 library not found: checking for Boost.Regex"])
-
-if test "x$pcre2_cv_libpcre2" != "xyes" || test "x$pcre2_cv_pcre2_h" != "xyes"; then
-  AX_BOOST_REGEX
-fi
+PKG_CHECK_MODULES([PCRE2], [libpcre2-8],
+   [AC_DEFINE([HAVE_PCRE2], [1], [Use (8-bit) Perl Compatible Regular Expression Library])],
+   [
+      # Check for libboost-regex library and header, adds
+      AC_SEARCH_LIBS([regcompA], [boost_regex boost_regex-mt], [
+        # Check for boost regex header
+        AC_CHECK_HEADER([boost/regex.hpp], [
+          BOOST_REGEX_FOUND=true
+          AC_DEFINE([HAVE_BOOST_REGEX], [1], [Use Boost Regex library])
+          AC_DEFINE([BOOST_REGEX_STANDALONE], [1], [Signal to boost lib that it's being without the rest of boost])
+        ], [
+          AC_MSG_ERROR([PCRE2 not found and boost/regex.hpp not found])
+        ])
+      ], [
+        AC_MSG_ERROR([PCRE2 not found and libboost-regex not found])
+      ])]
+)
 
 AX_CHECK_ZLIB([], [echo "recommended zlib not found: ugrep option -z is disabled"])
 
