Implement proper (optional) libzstd dependency
Replaces --with-zstd with --enable-zstd - the library and
header is found in the typical places.

Use PKG_CHECK_MODULES instead of home-grown detection script
ax_check_zstdlib

If --enable-zstd is given:
  - libzstd-dev it must be installed or configuration fails.

If not given:
  - configuration does not fail.
  - used if libzstd-dev is found, warn otherwise

--- a/configure.ac
+++ b/configure.ac
@@ -164,7 +164,22 @@ AS_IF([test "$enable_lz4" != "no"],[
   )
 ])
 
-AX_CHECK_ZSTDLIB([], [echo "optional libzstd not found: install if you want ugrep option -z to search .zst files"])
+AC_ARG_ENABLE([zstd],[
+  --enable-zstd           Use libzstd to enable searching inside ZST compressed files.
+                          @<:@defaults to enabled if libzstd is installed@:>@
+  --disable-zstd          Do not use libzstd])
+
+AS_IF([test "$enable_zstd" != "no"],[
+  PKG_CHECK_MODULES([ZSTD], [libzstd],
+    [AC_DEFINE([HAVE_LIBZSTD], [1], [Use libzstd compression library])
+    ],
+    # libzstd is optional by default, but required if --enable-zstd is given
+    [AS_IF([test -z "$enable_zstd" ],
+      [AC_MSG_WARN([libzstd not found: ugrep option -z cannot search .zst files])],
+      [AC_MSG_ERROR([libzstd not found. Is the devel package installed?])],
+    )]
+  )
+])
 
 AX_CHECK_BROTLILIB([], [echo "optional brotli library not found: install if you want ugrep option -z to search .br files"])
 
