--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,10 +7,12 @@ dist_noinst_SCRIPTS =
 
 bin_PROGRAMS   = ugrep
 ugrep_CPPFLAGS = \
+        $(ZSTD_CFLAGS) \
         $(LZ4_CFLAGS) \
         $(LZMA_CFLAGS) \
         -I$(top_srcdir)/include $(EXTRA_CFLAGS) $(PTHREAD_CFLAGS) -DPLATFORM=\"$(PLATFORM)\" -DGREP_PATH=\"$(GREP_PATH)\" -DWITH_NO_INDENT
 ugrep_CXXFLAGS = \
+        $(ZSTD_CFLAGS) \
         $(LZ4_CFLAGS) \
         $(LZMA_CFLAGS) \
         $(PCRE2_CFLAGS)
@@ -31,6 +33,7 @@ ugrep_SOURCES  = \
 ugrep_LDADD    = \
         $(PTHREAD_LIBS) \
         libreflex.a \
+        $(ZSTD_LIBS) \
         $(LZ4_LIBS) \
         $(LZMA_LIBS) \
         $(ZLIB_LIBS) \
