Implement proper (optional) liblz4 dependency
Replaces --with-lz4 with --enable-lz4 - the library and
header is found in the typical places.

Use AC_SEARCH_LIBS instead of home-grown detection script
ax_check_lz4lib

If --enable-lz4 is given:
  - liblz4-dev it must be installed or configuration fails.

If not given:
  - configuration does not fail.
  - used if liblz4-dev is found, warn otherwise

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,9 +7,11 @@ dist_noinst_SCRIPTS =
 
 bin_PROGRAMS   = ugrep
 ugrep_CPPFLAGS = \
+        $(LZ4_CFLAGS) \
         $(LZMA_CFLAGS) \
         -I$(top_srcdir)/include $(EXTRA_CFLAGS) $(PTHREAD_CFLAGS) -DPLATFORM=\"$(PLATFORM)\" -DGREP_PATH=\"$(GREP_PATH)\" -DWITH_NO_INDENT
 ugrep_CXXFLAGS = \
+        $(LZ4_CFLAGS) \
         $(LZMA_CFLAGS) \
         $(PCRE2_CFLAGS)
 ugrep_CFLAGS = \
@@ -29,6 +31,7 @@ ugrep_SOURCES  = \
 ugrep_LDADD    = \
         $(PTHREAD_LIBS) \
         libreflex.a \
+        $(LZ4_LIBS) \
         $(LZMA_LIBS) \
         $(ZLIB_LIBS) \
         $(PCRE2_LIBS)
