Update autoconf C++ standard checking macro
Updates the ax_cxx_compile_stdcxx.m4 script from autoconf-archive,
removes the old ax_cxx_compile_stdcxx_11.m4 convenience alias macro
(which calls ax_cxx_compile_stdcxx.m4 anyway, without adding any
value)

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_CONFIG_MACRO_DIR([m4])
 : ${CFLAGS="-Wall -Wextra -Wunused -O2"}
 
 AC_LANG([C++])
-AX_CXX_COMPILE_STDCXX_11([ext], [mandatory])
+AX_CXX_COMPILE_STDCXX([11], [ext], [mandatory])
 
 AC_HEADER_DIRENT
 AC_STRUCT_DIRENT_D_INO
