--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "autotools" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "autotools" ]
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
 
     - name: configure
       run: ./configure
-    - name: make
-      run: make
-    - name: make test
-      run: make test
+        --disable-dependency-tracking
+
+    - name: Check Source Distribution (compile, install, test, uninstall, tarball)
+      run: make -j`nproc` distcheck
