Adapt test suite to automake Parallel Harness
- the two tests, single and multi-threaded tests can now run
  simultaneously (they use the "st" and "mt" subdirectories as
  temp dirs so they do not conflict)

- The verify.sh is adapted to run the directory tests in the
  $builddir/src CWD, and the file tests in the $srcdir/tests CWD

This setup is not much cleaner than before. These tests will be a real
challenge to debug if necessary.

Adapting them to the Parallel Harness means they can run as standard
"make check" and not the home-grown "make test". This also means they
will automatically run during "make distcheck", which is the main
motivation for this adaptation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src patterns
+SUBDIRS = src patterns tests/dist
 
 man1_MANS = man/ug.1 man/ugrep.1
 
@@ -61,19 +61,3 @@ install-data-hook:
 		 echo "|                                                      |"; \
 		 echo "|                             https://ugrep.com        |"; \
 		 echo "|______________________________________________________|";
-
-
-.PHONY:		test
-
-test:		${UGREP}
-		@echo
-		@echo "*** SINGLE-THREADED TESTS ***"
-		@echo
-		cd $(top_srcdir)/tests && env UGREP_ABS_PATH=${UGREP} CONFIGH_ABS_PATH=${CONFIGH} ./verify.sh -J1
-		@echo
-		@echo "*** MULTI-THREADED TESTS ***"
-		@echo
-		cd $(top_srcdir)/tests && env UGREP_ABS_PATH=${UGREP} CONFIGH_ABS_PATH=${CONFIGH} ./verify.sh
-		@echo
-		@echo "OK"
-		@echo
