Fix mingw32 cross-compilation
In a mingw32 env on a Linux host, without Windows SDK/DDK available,
the conditional compilation around the virtual terminal
(ENABLE_VIRTUAL_TERMINAL_INPUT) was not correct; it assumed that all
Windows builds have this feature available.

Building with CXX=x86_64-w64-mingw32-g++-posix works.
CXX=x86_64-w64-mingw32-g++-win32 does not work because of missing
native mutex implementation in mingw32 - A solution exists that can
be integrated: https://github.com/meganz/mingw-std-threads

Implements portability fixes around the ssize_t defines.

Further, it appears the #ifdefs were never tested with OS_WIN/VKEY_DOS
combination of defines. With this combination, the VKey::poll() function
is not implemented.

This commit reworks the #ifdefines around OS_WIN, VKEY_WIN and
ENABLE_VIRTUAL_TERMINAL_INPUT, to enable VKEY_DOS mode to be built.

The resulting binary is a Win32 console application with unicode
support, but without color or virtual terminal features.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,15 @@
 SUBDIRS = src patterns tests/dist
 
+if ENABLE_MANPAGE
 man1_MANS = man/ug.1 man/ugrep.1
+endif
 
 EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
 
 UGREP = $(shell pwd)/$(top_builddir)/src/ugrep$(EXEEXT)
 CONFIGH = $(shell pwd)/$(top_builddir)/config.h
 
+if ENABLE_COMPLETIONS
 if ENABLE_BASH_COMPLETION
 bashcompletiondir = $(BASH_COMPLETION_DIR)
 bashcompletion_DATA = \
@@ -14,6 +17,7 @@ bashcompletion_DATA = \
 	completions/bash/ug \
 	completions/bash/ugrep+ \
 	completions/bash/ug+
+endif
 endif
 
 
